@@ -4,7 +4,8 @@ Changelog
 0.10 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fix bug in using the same translate for str and unicode
+  in fakeimage-getter [pbauer]
 
 
 0.9 (2014-07-10)
